syntax = "proto3";

import "google/protobuf/timestamp.proto";

package dubpay.notification;

service NotificationHandler {
    rpc SendNotification (SendNotificationRequest) returns (SendNotificationResponse);
}

message SendNotificationRequest {
    string userId = 1;
    string message = 2;
    google.protobuf.Timestamp timestamp = 3;
}

message SendNotificationResponse {
    string id = 1;
    string message = 2;
}